2006-10-04  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/tclthread.c: Fixed handling of mutex identifiers
	in [ns_cond wait] to allow string-based handles as the
	rest of the code.

2006-10-02  Vlad Seryakov  <seryakov@users.sf.net>

	nsd/driver.c: Make driver to use Unix domain sockets of 
	type DGRAM and STREAM

2006-09-28  Vlad Seryakov  <seryakov@users.sf.net>

	* Makefile:
	* contrib/examples: Added examples dir with index page and
	upload script. Updated makefile to do exampels installation
	during make install

2006-09-27  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/driver.c: Fixed bug in ns_upload_stats

	* nsd/config.c: Changed log Debug level to Dev level
	to make logfile not filled with too many debug messages

2006-09-27  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsproxy/nsproxylib.c: Added "-maxruns" parameter for proxy queue
	to limit number of runs in the proxy. After reaching the limit 
	the proxy slave process is automatically restarted.

	* nsproxy/ns_proxy.man: Updated docs.
	* tests/ns_proxy.test: Added tests to check -maxruns option.

	* nsd/tclxkeylist.c: Fix to avoid setting object in interp result.

2006-09-26  Bernd Eidenschink  <eide@users.sf.net>

        * contrib/banners/ns_poweredby.gif:
        * contrib/banners/ns_poweredby.png:
	* contrib/banners/ns_logosmall.gif:
	* contrib/banners/ns_logosmall.png:
	* contrib/banners/ns_logobig.gif:
	* contrib/banners/ns_logobig.png:
	* contrib/banners/msie.html:
	* contrib/banners/README: Added two sets of banners (GIF/PNG)
	for NaviServer

2006-09-23  Vlad Seryakov  <seryakov@users.sf.net>

        * nsd/connio.c: Fixed bug in Ns_ConnWriteVChars which prevented to
        send correctly multiple small buffers.
        * tests/*: Updated test to mark encoding as knownBug until fixed and
        http chunked test according to updated ns_httptest

2006-09-22  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
